--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              </a>
             </div>
 
-            <div class="idea-logo">
+            <div class="idea-logo container">
                 <p class="idea-our-title">Our Clients</p>
                 <p class="idea-work-title">We've Worked with</p>
                 <ul class="idea-item">
